# ev0x-consensus

./: .flake8  .gitignore  Dockerfile  README.md  build_and_push.sh  deploy_tee.sh  ev0x-cli.py  ev0x-ctl.sh  input.json  launch.sh  main.py  pyproject.toml  requirements.txt  test.md
.github/workflows/: build.yml  build.yml.bak.old  build.yml.old  ci-cd.yaml  flare-integration-tests.yaml
config/: defaults.yml  development.yml  production.yml
consensus_benchmark/: README.md  blockchain_consensus_tests.py  visualization.py
consensus_benchmark/consensus_benchmark/: README.md  benchmark.py  metrics.py  requirements.txt
consensus_benchmark/consensus_benchmark/data/: test_cases.json
consensus_benchmark/test_cases/: __init__.py  base_types.py  blockchain_consensus_tests.py  edge_cases.py  factual_tests.py  reasoning_tests.py
consensus_benchmark/tests/: blockchain_consensus_tests.py
deployment/: README.md  tee_config.yaml
examples/: citation_example.py  test_citation.py
src/: __init__.py  ev0x_model_test.py  test_models.py
src/api/: __init__.py  server.py
src/benchmarks/: consensus_vs_single.py  run_benchmark.py
src/bias/: __init__.py  detector.py  neutralizer.py
src/cli/: __init__.py  ev0x_cli.py
src/config/: __init__.py  models.py
src/consensus/: __init__.py  citation_verifier.py  synthesizer.py
src/data/: __init__.py  datasets.py
src/evaluation/: __init__.py  metrics.py
src/evolution/: __init__.py  genetic.py  meta_intelligence.py  model_dna.py  selection.py
src/factual/: __init__.py  citation.py
src/flare_integrations/: __init__.py  dex_integration.py  ftso_integration.py  state_connector.py  validator.py
src/integrations/: __init__.py  flare.py
src/models/: __init__.py  ai_model.py  model_runner.py
src/rewards/: __init__.py  shapley.py
src/router/: openrouter.py
src/tee/: README.md  attestation.py  confidential_vm.py  integration.py
src/validation/: schema_validator.py  value_validator.py
tests/: __init__.py  chat_completion.py  completion.py  conftest.py  test_consensus.py  test_consensus_flow.py  test_consensus_flow.py.bak  test_openrouter.py  test_tee_attestation.py  test_tee_integration.py
tests/flare/: test_ftso_integration.py
