[tool.poetry]
name = "ev0x"
version = "0.1.0"
description = "EV0X Project"
authors = ["Team <team@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.mypy]
# Core settings
python_version = "3.9"
platform = "linux"

# Type checking behavior
ignore_missing_imports = true
follow_imports = "skip"
allow_redefinition = true
implicit_reexport = true
allow_untyped_defs = true
check_untyped_defs = false

# Common ML project settings
disallow_untyped_calls = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false

# Warnings configuration
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_return_any = false
warn_unused_configs = false

# Disable specific error codes for ML flexibility
disable_error_code = [
    "attr-defined",
    "name-defined",
    "call-arg",
    "arg-type",
    "assignment",
    "override",
    "return-value",
    "no-redef",
    "dict-item",
    "index",
    "var-annotated",
    "return",
    "annotation-unchecked"
]

# ML project specific exclusions
exclude = [
    'tests/',
    'setup.py',
    'docs/',
    'build/',
    '.venv/',
    'src/data/datasets.py',
    'src/flare_integrations/state_connector.py',
    'src/evaluation/metrics.py',
    'src/consensus/synthesizer.py',
    'src/tee/integration.py',
    'src/benchmarks/'
]

# Per-module settings for data science patterns
[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build_backend"

[project]
name = "ev0x"
version = "0.1.0"
authors = [
  { name = "ev0x Team" },
]
description = "Evolutionary Model Consensus Mechanism"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core dependencies from flare-ai-consensus
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "openai>=1.21.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
    "typer>=0.9.0",
    "typing-extensions>=4.12.2",
    
    # Google Cloud dependencies from ev0x
    "google-cloud-storage>=2.8.0",
    "google-cloud-bigquery>=3.9.0",
    "google-auth>=2.19.0",
    "google-api-python-client>=2.86.0",
    "google-generativeai>=0.3.0",
    
    # Machine learning and data science
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.7.0",
    
    # Consensus mechanism requirements
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "sentence-transformers>=2.6.0",
    "langchain>=0.0.300",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    
    # Web and API
    "urllib3>=1.26.18",
    "requests>=2.30.0",
    "aiohttp>=3.9.0",
    
    # Testing and development
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pylint>=2.17.0",
    "black>=23.3.0",
    "isort>=5.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pylint>=2.17.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/ev0x"
"Bug Tracker" = "https://github.com/yourusername/ev0x/issues"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

